Fixed rendering issues on IE10-IE11
https://forum.rainmeter.net/viewtopic.php?p=140237#p140237

--- a/source/css/rainmeter.css
+++ b/source/css/rainmeter.css
@@ -20,7 +20,23 @@ body {
   z-index: 0;
   height: 100%;
   min-height: 100vh;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
+/* IE10-11 only */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+   body {
+     display: block;
+     height: 100%;
+   }
+   .content {
+     /* Calculates the height of the page minus header and footer */
+     height: calc(100% - 88px - 93px);
+   }
+}
+
 a {
   -webkit-transition: all .2s ease-in-out;
   -o-transition: all .2s ease-in-out;
@@ -60,6 +76,7 @@ code {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 0;
   flex: 1 1 0;
+  overflow: hidden;
 }
 .text-muted b {
     color: #364452;
@@ -717,6 +734,7 @@ p.news-date {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  flex-direction: column;
 }
 .error404 h1 {
   font-size: 10rem;
@@ -735,14 +753,14 @@ p.news-date {
   z-index: 1;
   top: 0;
   left: 0;
-  overflow: hidden;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 88px);
   margin-bottom: 0;
+  overflow: hidden;
 }
 .floatingIcons li {
   position: absolute;
-  bottom: -200px;
+  bottom: -300px;
   display: block;
   list-style: none;
   -webkit-transition-timing-function: linear;
